fix devicewidth bug on mobile devices

--- a/static/styles.css
+++ b/static/styles.css
@@ -80,6 +80,7 @@ table tr:nth-child(even) {
 table th {
     font-weight: bold;
     background-color: transparent;
+    text-align: center;
 }
 
 .saveIcon, .delIcon .editIcon{
